@@ -28,6 +28,9 @@
                 <button class="limited">Limited time</button>
             </div>
             <div class="flex banners-wrapper">
+                <div class="剑与盔的嘶鸣-2024-05-21 banner-button">
+                    <img src="images/banners/Clang_of_Sword_and_Armor_Banner.webp">
+                </div>
                 <div class="孢子维和论 banner-button">
                     <img src="images/banners/The_Spores_of_Peace_Banner.webp">
                 </div>
@@ -103,7 +106,7 @@
                 <div class="一克“好奇心”-2023-10-26 banner-button">
                     <img src="images/banners/One_Gram_of_Curiosity_Banner.webp">
                 </div>
-                <div class="剑与盔的嘶鸣 banner-button">
+                <div class="剑与盔的嘶鸣-2023-10-26 banner-button">
                     <img src="images/banners/Clang_of_Sword_and_Armor_Banner.webp">
                 </div>
             </div>
