@@ -1,5 +1,8 @@
+2024/05/21
+- Added A Knight banner
+
 2024/04/30
-Added Yearning of the Water banner
+- Added Yearning of the Water banner
 
 2024/04/18
 - Added Spathodea and Ulu
